package com.xiaoma.adapter;

public interface Call<T> {

   void enqueque();
}
