package com.xiaoma.adapter;

public class OkhttpCall<T> implements Call<T> {
    @Override
    public void enqueque() {

    }
}
