package com.xiaoma.pluginmodule;

public class Utils {

    public Utils() {
    }

    public void shout() {
        System.out.println("I'm shouting from a plugin!!");
    }
}
