package com.xiaoma.proxy;

public interface IFly {

    void fly(String name);
}
