@startuml

title __PLUGINMODULE's Class Diagram__\n

  namespace com.xiaoma {
    class com.xiaoma.RxjavaCallAdapterFactory {
    }
  }
  

  namespace com.xiaoma {
    namespace adapter {
      interface com.xiaoma.adapter.Call {
      }
    }
  }
  

  namespace com.xiaoma {
    namespace adapter {
      interface com.xiaoma.adapter.CallAdapter {
      }
    }
  }
  

  namespace com.xiaoma {
    namespace adapter {
      class com.xiaoma.adapter.ExecutorCallAdapterFactory {
      }
    }
  }
  

  namespace com.xiaoma {
    namespace adapter {
      class com.xiaoma.adapter.OkhttpCall {
      }
    }
  }
  

  namespace com.xiaoma {
    namespace adapter {
      class com.xiaoma.adapter.Retrofit {
      }
    }
  }
  

  namespace com.xiaoma {
    namespace adapter {
      class com.xiaoma.adapter.ServerMethod {
      }
    }
  }
  

  namespace com.xiaoma {
    namespace pluginmodule {
      class com.xiaoma.pluginmodule.BuildConfig {
      }
    }
  }
  

  namespace com.xiaoma {
    namespace pluginmodule {
      class com.xiaoma.pluginmodule.MainActivity {
      }
    }
  }
  

  namespace com.xiaoma {
    namespace pluginmodule {
      class com.xiaoma.pluginmodule.Utils {
      }
    }
  }
  

  namespace com.xiaoma {
    namespace proxy {
      class com.xiaoma.proxy.Bird {
      }
    }
  }
  

  namespace com.xiaoma {
    namespace proxy {
      class com.xiaoma.proxy.IFlayFactory {
      }
    }
  }
  

  namespace com.xiaoma {
    namespace proxy {
      interface com.xiaoma.proxy.IFly {
      }
    }
  }
  

  com.xiaoma.RxjavaCallAdapterFactory -up-|> com.xiaoma.adapter.CallAdapter.Factory
  com.xiaoma.adapter.ExecutorCallAdapterFactory -up-|> com.xiaoma.adapter.CallAdapter.Factory
  com.xiaoma.adapter.OkhttpCall .up.|> com.xiaoma.adapter.Call
  com.xiaoma.adapter.Retrofit o-- com.xiaoma.adapter.CallAdapter.Factory : factory
  com.xiaoma.pluginmodule.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.xiaoma.proxy.Bird .up.|> com.xiaoma.proxy.IFly


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
